# Cipher-web

./: Cargo.toml  README.md
src/: cipher_type.rs  form.rs  handle.rs  lfsr_jk.rs  lib.rs  main.rs  rc4.rs
templates/: affine.html.tera  base.html.tera  d_h.html.tera  index.html.tera  lfsr_jk.html.tera  rc4.html.tera  rsa_crypt.html.tera
