[package]
name = "cipher-web-rocket"
version = "0.1.0"
authors = ["luweiba"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0.116"
serde_derive = "1.0.116"
des = "0.6.0"
aes = "0.6.0"
block-modes = "0.7.0"
base64 = "0.13.0"
urldecode = "0.1.1"
rsa = { git="https://github.com/RustCrypto/RSA" }
rand = "0.7.3"
pem = "0.8.0"
sha3 = "0.9.1"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates"]